# PrivateLabelOpportunities

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  notes.md  pyproject.toml  requirements-dashboard.txt  requirements.txt
.streamlit/: config.toml
data/sample/: category_summary.parquet  off_eu_sample.parquet  opportunity_scores.parquet
notebooks/: 01_data_loading_cleaning.ipynb  02_supermarket_scraping.ipynb  03_eda_category_landscape.ipynb  04_nutritional_gap_analysis.ipynb  05_opportunity_scoring.ipynb  05b_predictive_model.ipynb  06_findings_recommendations.ipynb
planning/: comprehensivePlan.md
planning/general/: modern-framework-project-ideas.md  portfolio-principles-reference.md
scripts/: build_dataset.py  download_off.py  scrape_albert_heijn.py  scrape_mercadona.py
src/: __init__.py
src/analysis/: category_landscape.py  nutritional_gaps.py  opportunity_scorer.py  price_gaps.py  reformulation.py
src/data/: clean.py  join.py  load_off.py  nutriscore.py
src/data/scrapers/: __init__.py  albert_heijn.py  base.py  carrefour.py  jumbo.py  lidl.py  mercadona.py
src/models/: brand_classifier.py  success_predictor.py
src/visualisation/: category_map.py  dashboard.py  nutritional_radar.py  opportunity_matrix.py  price_comparison.py
tests/: test_brand_classifier.py  test_category_landscape.py  test_join.py  test_nutriscore.py  test_nutritional_gaps.py  test_opportunity_scorer.py
